--- a/package.json
+++ b/package.json
@@ -20,9 +20,7 @@
   "dependencies": {
     "@apollo/react-hooks": "^4.0.0",
     "apollo-server-express": "^2.19.2",
-    "if-env": "^1.0.4"
-  },
-  "devDependencies": {
+    "if-env": "^1.0.4",
     "concurrently": "^5.3.0"
   }
 }
